<resources>
    <string name="app_name">BechDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capture_amp_upload_the_item_s_photo">Capture &amp; Upload the item\'s photo</string>
    <string name="upload_three_to_four_photos_of_the_item_for_clarity">Upload three to four photos of the item for clarity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="buy_sell_amp_rent_products">Buy, Sell &amp; Rent Products</string>
    <string name="one_step_solution_for_all_your_college_necessities">One step solution for all your college necessities</string>
    <string name="choose_from_a_range_of_options">Choose from a range of options</string>
    <string name="compare_the_prices_and_choose_the_best_product">Compare the prices and choose the best product</string>
    <string name="contact_the_seller_buyer">Contact the seller/buyer</string>
    <string name="get_in_touch_with_seller_buyer_in_your_own_college">Get in touch with seller/buyer in your own college</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="College">College</string>
    <string name="Year">Year</string>
    <string name="dob">Date of Birth</string>
    <string name="first">1st</string>
    <string name="Name">Name</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="fourth">4th</string>
    <string name="Upload">Upload Official College ID</string>
    <string name="Uploadbtn">Choose</string>
    <string name="verification">Team will verify your ID for security purposes within 24 hours</string>
    <string name="accepttnc">I accept <a href="https://bechdo.netlify.app/tnc.html">Terms and Conditions</a> and <a href="https://bechdo.netlify.app/privacy.html">Privacy Policy</a></string>
    <string name="Save">Save</string>
    <string name="upload_profile">Upload Profile</string>
    <string name="uploadClgIdChanged">Change</string>
    <string name="countdown">Resend Verification Mail in %ds</string>
    <string name="books">Books</string>
    <string name="welcome">Welcome</string>
    <string name="want_to_rent_sell_something">Want to rent/sell something?</string>
    <string name="show_all">Show all</string>
    <string name="recently_added">Recently Added</string>
    <string name="categories">Categories</string>
    <string name="todo">TODO</string>
    <string name="_200">200$</string>
    <string name="to">To</string>
    <string name="post_information">Post Information</string>
    <string name="add_title">Add Title</string>
    <string name="set_a_price">Set a price</string>
    <string name="description_quality">Description/Quality</string>
    <string name="add_photos">Add Photos</string>
    <string name="select_tags">Select Tags</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="sports">Sports</string>
    <string name="instruments">Instruments</string>
    <string name="rent">Rent</string>
    <string name="stationery">Stationery</string>
    <string name="electronics">Electronics</string>
    <string name="other">Other</string>
    <string name="get_started">Get Started</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="sell_products">Sell Products</string>
    <string name="help">Help</string>
    <string name="request">Request</string>
    <string name="messages">Messages</string>
    <string name="sign_out">Sign out</string>
    <string name="rent_products">Rent Products</string>
    <string name="active_products">Active Products</string>
    <string name="sold_products">Sold Products</string>
    <string name="price_per_day">Set a Price(per day)</string>
    <string name="rent_info">Rent Information</string>
    <string name="ProductName">Product Name</string>
    <string name="Chat">Chat</string>
    <string name="category">Category</string>
    <string name="apply">Apply</string>
    <string name="mark_as_unavailable">Mark as Unavailable</string>
    <string name="mark_as_available">Mark as Available</string>
    <string name="remove">Remove</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="type_your_message">Type your message</string>
    <string name="online">Online</string>
    <string name="favourites">Favourites</string>
    <string name="select_one_or_more_filters">Select one or more filters</string>
    <string name="price_range">Price Range</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="contact_us">Contact Us</string>
    <string name="this_product_is_currently_unavailable">This Product is currently unavailable</string>
    <string name="faqs_ques_1">Do we have a payment gateway?</string>
    <string name="faqs_ans_1">No, we do not support any online payments as of now, the buyer can interact with the seller using the inbuilt chat functionality and discuss the mode of payment. This also makes the prices negotiable.😉</string>
    <string name="faqs_ques_2">How do we verify your college Id?</string>
    <string name="faqs_ans_2">Our team verifies the college ID manually within 24 hours of uploading the same. Although the app is usable within that time frame, if found incorrect, the account would be disabled and one needs to contact us with an authentic college id for it to be activated.</string>
    <string name="faqs_ques_3">Can I only see products from my own college?</string>
    <string name="faqs_ans_3">No, products from all the listed colleges will be visible and available to every user. However one can use the college filter to see products of only their or a particular college.</string>
    <string name="faqs_ques_4">What should I keep in mind while posting a product?</string>
    <string name="faqs_ans_4">While posting a product for rent or sale, add a proper title and description related to the product. The price should be reasonable and product photos should be clear. Also, keep in mind that an appropriate category should be selected while putting up the product on the app.</string>
    <string name="faqs_ques_5">How do I delete the product once the transaction has taken place?</string>
    <string name="faqs_ans_5">Once the transaction has taken place, you can mark the product as unavailable (in cases of rent) or you can remove the product permanently from the application as well. Both the options have been listed &amp; can be seen once you open the product description.</string>
    <string name="faqs_ques_6">How can I update my account information?</string>
    <string name="faqs_ans_6">On the top right corner of the app dashboard, you can open your profile by clicking on the image icon. There, you are given the option to edit your name, year or profile photo if you want to. Rest of the fields cannot be updated/changed once saved while creating the profile.</string>
    <string name="faqs_ques_7">Can I delete my account?</string>
    <string name="faqs_ans_7">No, the account cannot be deleted once created.</string>
    <string name="faqs_ques_8">How do I search for a product?</string>
    <string name="faqs_ans_8">Go to the search bar at the top of your screen and search for a product by name. You can also filter products by type(rent or sale), college, price and/or category.</string>
</resources>