<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.introactivity.IntroFragment4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:layout_gravity="center"
            android:src="@drawable/contact" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/contact_the_seller_buyer"
            android:textColor="#312E5F"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/description"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/get_in_touch_with_seller_buyer_in_your_own_college"
            android:textColor="#E3386A"
            android:textSize="18sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceedBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:textSize="18sp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"/>

</RelativeLayout>