<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginEnd="8dp"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            app:shapeAppearanceOverlay="@style/CircularImageView"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:id="@+id/image"
            android:src="@drawable/compare_prices"
            android:background="@color/white"
            android:layout_width="150dp"
            android:layout_height="150dp"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginStart="7dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvRecentProduct"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/books"
                android:textColor="#312e5f"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvRecentPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/_200"
                android:textColor="#312e5f"
                android:textSize="15sp" />

        </LinearLayout>

        <ImageView
            android:layout_marginStart="13dp"
            android:paddingTop="0dp"
            android:layout_width="28dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_baseline_bookmark_border_24"
            app:tint="@color/black"
            android:contentDescription="@string/to" />

    </LinearLayout>

</LinearLayout>